external-crates/move/crates/move-compiler/tests/move_check/parser/restricted_ident_positions.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04016]: too few arguments
  ┌─ tests/move_check/parser/restricted_ident_positions.move:5:13
  │
5 │         let `As` { `const`, `move`: `copy` } = `as`;
  │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing binding for field 'const' in 'a::acquries::As'

error[E04016]: too few arguments
  ┌─ tests/move_check/parser/restricted_ident_positions.move:5:13
  │
5 │         let `As` { `const`, `move`: `copy` } = `as`;
  │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing binding for field 'move' in 'a::acquries::As'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/restricted_ident_positions.move:5:20
  │
5 │         let `As` { `const`, `move`: `copy` } = `as`;
  │                    ^ Unexpected 'r#<Identifier>'. Expected a field pattern

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/restricted_ident_positions.move:5:29
  │
5 │         let `As` { `const`, `move`: `copy` } = `as`;
  │                             ^ Unexpected 'r#<Identifier>'. Expected a field pattern

error[E03009]: unbound variable
  ┌─ tests/move_check/parser/restricted_ident_positions.move:6:17
  │
4 │     fun `invariant`<`break`>(`as`: `As`<`break`>): `break` {
  │                              ---- Similarly named defintion found here
5 │         let `As` { `const`, `move`: `copy` } = `as`;
6 │         assert!(`copy` > 1, 0);
  │                 ^^^^^^
  │                 │
  │                 Unbound variable 'copy'
  │                 Did you mean: 'as'

error[E03009]: unbound variable
  ┌─ tests/move_check/parser/restricted_ident_positions.move:7:9
  │
4 │     fun `invariant`<`break`>(`as`: `As`<`break`>): `break` {
  │                              ---- Similarly named defintion found here
  ·
7 │         `copy`;
  │         ^^^^^^
  │         │
  │         Unbound variable 'copy'
  │         Did you mean: 'as'

error[E03009]: unbound variable
  ┌─ tests/move_check/parser/restricted_ident_positions.move:8:9
  │
8 │         `const`
  │         ^^^^^^^ Unbound variable 'const'
